<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_01"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_search" />
        <EditText
            android:id="@+id/et_search"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/imageb_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/image_serach"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_02"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:id="@+id/tv_heavy"
            android:text="@string/message_heavy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progressbar"
            android:max="100"
            android:progress="50"
            android:secondaryProgress="75"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_message"
        android:layout_gravity="center"
        android:text="@string/message_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/Linear_03"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btn_other"
            android:text="@string/action_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_now"
            android:text="@string/action_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>